# INSB

./: .gitignore
lab-1/: caesar.cpp  input.txt  lab-1-report.docx  lab-1-schema.drawio  vigenere.cpp
lab-2/: CMakeLists.txt  auth.cpp  client.cpp  des.cpp  lab-2-report.docx  server.cpp  utils.h
lab-2/des/: des.cpp  des.h
lab-3/: lab-3-report.docx  lab-4-5-report.docx
lab-3/src/ddos/: CMakeLists.txt  client.cpp  conn.cpp  conn.h  main.cpp  server.cpp  server.h
lab-3/src/ddos/libs/: Connection.cpp  Connection.h  TCPServer.cpp  TCPServer.h
lab-3/src/syn/: CMakeLists.txt  client.cpp  server.cpp
lab-3/src/syn/libs/: utils.cpp
lab-4/: lab-4-5-report.docx  lab-4.pro  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  psqldb.cpp  psqldb.h  refactordialog.cpp  refactordialog.h
lab-5/: keypair.pem  lab4installer.sig  pubkey.crt
lab-5/config/: config.xml
lab-6/: .clang-format  CMakeLists.txt  lab-6-report.docx  main.cpp  utils.hpp
lab-6/lab-files/: loginwindow.h  mainwindow.cpp  mainwindow.h  psqldb.cpp  psqldb.h  refactordialog.h
lab-6/obfuscated/: loginwindow.ui
